--- a/The Math/ChartDetailView.xib
+++ b/The Math/ChartDetailView.xib
@@ -10,10 +10,10 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reI-jc-7FP">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reI-jc-7FP">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
-                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Zn-7x-b4A" userLabel="Content View">
+                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Zn-7x-b4A" userLabel="Content View">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="12F-GG-nX9">
@@ -62,7 +62,7 @@
                                         </mask>
                                     </variation>
                                 </view>
-                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDV-Zh-V5M" userLabel="Header">
+                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDV-Zh-V5M" userLabel="Header">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tMj-z7-Xco">
@@ -172,10 +172,10 @@
                                                     <exclude reference="pzR-dE-bri"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="1ae-nZ-mjJ"/>
-                                                    <include reference="OiG-Wq-P57"/>
                                                     <exclude reference="Ctr-So-HOC"/>
                                                     <include reference="fvl-7w-xTw"/>
+                                                    <include reference="1ae-nZ-mjJ"/>
+                                                    <include reference="OiG-Wq-P57"/>
                                                 </mask>
                                             </variation>
                                         </view>
@@ -235,7 +235,7 @@
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOTE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6C-5J-wCD">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="NOTE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6C-5J-wCD">
                                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -279,6 +279,14 @@
                                             <exclude reference="TFJ-8S-ca4"/>
                                         </mask>
                                         <mask key="constraints">
+                                            <exclude reference="9Wz-1E-ui9"/>
+                                            <exclude reference="Opg-3I-9Je"/>
+                                            <exclude reference="XeQ-jG-qzv"/>
+                                            <exclude reference="CwI-Fj-TLi"/>
+                                            <exclude reference="O8k-Uj-pEx"/>
+                                            <exclude reference="Sjc-Dk-ixJ"/>
+                                            <exclude reference="bQU-Fp-hQu"/>
+                                            <exclude reference="g4a-si-sPu"/>
                                             <exclude reference="6WE-jE-Hld"/>
                                             <exclude reference="VVf-Bx-fii"/>
                                             <exclude reference="Zkv-S0-Joj"/>
@@ -287,14 +295,6 @@
                                             <exclude reference="N5Y-bc-a6H"/>
                                             <exclude reference="n9H-VS-bx7"/>
                                             <exclude reference="skA-oK-aSE"/>
-                                            <exclude reference="CwI-Fj-TLi"/>
-                                            <exclude reference="O8k-Uj-pEx"/>
-                                            <exclude reference="Sjc-Dk-ixJ"/>
-                                            <exclude reference="bQU-Fp-hQu"/>
-                                            <exclude reference="g4a-si-sPu"/>
-                                            <exclude reference="9Wz-1E-ui9"/>
-                                            <exclude reference="Opg-3I-9Je"/>
-                                            <exclude reference="XeQ-jG-qzv"/>
                                             <exclude reference="415-NK-cNa"/>
                                             <exclude reference="9pn-XY-Jhp"/>
                                             <exclude reference="eHg-dL-c9m"/>
@@ -309,18 +309,18 @@
                                             <include reference="TFJ-8S-ca4"/>
                                         </mask>
                                         <mask key="constraints">
+                                            <include reference="9Wz-1E-ui9"/>
+                                            <include reference="Opg-3I-9Je"/>
+                                            <include reference="XeQ-jG-qzv"/>
+                                            <exclude reference="CwI-Fj-TLi"/>
+                                            <include reference="O8k-Uj-pEx"/>
+                                            <exclude reference="bQU-Fp-hQu"/>
+                                            <include reference="g4a-si-sPu"/>
                                             <exclude reference="6WE-jE-Hld"/>
                                             <include reference="VVf-Bx-fii"/>
                                             <include reference="sSa-sh-rPg"/>
                                             <include reference="N5Y-bc-a6H"/>
                                             <include reference="skA-oK-aSE"/>
-                                            <exclude reference="CwI-Fj-TLi"/>
-                                            <include reference="O8k-Uj-pEx"/>
-                                            <exclude reference="bQU-Fp-hQu"/>
-                                            <include reference="g4a-si-sPu"/>
-                                            <include reference="9Wz-1E-ui9"/>
-                                            <include reference="Opg-3I-9Je"/>
-                                            <include reference="XeQ-jG-qzv"/>
                                             <include reference="415-NK-cNa"/>
                                             <include reference="9pn-XY-Jhp"/>
                                             <exclude reference="eHg-dL-c9m"/>
@@ -333,11 +333,11 @@
                                             <exclude reference="O6C-5J-wCD"/>
                                         </mask>
                                         <mask key="constraints">
+                                            <include reference="Sjc-Dk-ixJ"/>
                                             <exclude reference="6WE-jE-Hld"/>
                                             <include reference="Zkv-S0-Joj"/>
                                             <include reference="G5T-Mn-jam"/>
                                             <include reference="n9H-VS-bx7"/>
-                                            <include reference="Sjc-Dk-ixJ"/>
                                         </mask>
                                     </variation>
                                 </view>
