--- a/The Math/OnboardingLocationView.xib
+++ b/The Math/OnboardingLocationView.xib
@@ -3,11 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="AvenirNext.ttc">
-            <string>AvenirNext-Regular</string>
-        </mutableArray>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,23 +16,23 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9i-A84">
                             <rect key="frame" x="100" y="134" width="400" height="331"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location permission" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ToB-kt-znT" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location permission" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ToB-kt-znT">
                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="onboarding_06" translatesAutoresizingMaskIntoConstraints="NO" id="Ryg-tr-odw">
                                     <rect key="frame" x="0.0" y="-94" width="94" height="94"/>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-gD-Bjp" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-gD-Bjp">
                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="280" id="8Ef-Kv-3RG"/>
                                         <constraint firstAttribute="width" constant="280" id="yX7-mJ-Mnr"/>
                                     </constraints>
                                     <string key="text">Allow access to your location when saving a mood so How Am I Doing can record which neighborhood you were in and what the weather was like.</string>
-                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                     <variation key="default">
@@ -57,14 +52,22 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ToB-kt-znT" secondAttribute="trailing" constant="8" id="6wy-Ge-qhF"/>
-                                <constraint firstItem="iXW-gD-Bjp" firstAttribute="top" secondItem="ToB-kt-znT" secondAttribute="bottom" constant="8" id="FN9-s0-Xte"/>
-                                <constraint firstAttribute="bottom" secondItem="iXW-gD-Bjp" secondAttribute="bottom" id="Fnj-yY-1uP"/>
+                                <constraint firstItem="iXW-gD-Bjp" firstAttribute="top" secondItem="ToB-kt-znT" secondAttribute="bottom" constant="8" id="FN9-s0-Xte">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="11"/>
+                                </constraint>
+                                <constraint firstAttribute="bottom" secondItem="iXW-gD-Bjp" secondAttribute="bottom" id="Fnj-yY-1uP">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                </constraint>
                                 <constraint firstAttribute="trailing" secondItem="ToB-kt-znT" secondAttribute="trailing" constant="8" id="Sy8-a8-CCO"/>
                                 <constraint firstItem="Ryg-tr-odw" firstAttribute="top" secondItem="9iG-9i-A84" secondAttribute="top" constant="8" id="Xgf-su-d78"/>
                                 <constraint firstItem="ToB-kt-znT" firstAttribute="top" secondItem="Ryg-tr-odw" secondAttribute="bottom" constant="12" id="czo-WZ-Ube"/>
-                                <constraint firstAttribute="bottom" secondItem="iXW-gD-Bjp" secondAttribute="bottom" id="eEz-0W-10Y"/>
+                                <constraint firstAttribute="bottom" secondItem="iXW-gD-Bjp" secondAttribute="bottom" id="eEz-0W-10Y">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                </constraint>
                                 <constraint firstItem="ToB-kt-znT" firstAttribute="leading" secondItem="9iG-9i-A84" secondAttribute="leading" constant="8" id="fcR-Kx-Jeq"/>
-                                <constraint firstItem="iXW-gD-Bjp" firstAttribute="top" secondItem="ToB-kt-znT" secondAttribute="bottom" constant="8" id="sA4-LG-ant"/>
+                                <constraint firstItem="iXW-gD-Bjp" firstAttribute="top" secondItem="ToB-kt-znT" secondAttribute="bottom" constant="8" id="sA4-LG-ant">
+                                    <variation key="heightClass=regular-widthClass=compact" constant="11"/>
+                                </constraint>
                                 <constraint firstAttribute="centerX" secondItem="Ryg-tr-odw" secondAttribute="centerX" id="sNS-L1-RZ3"/>
                                 <constraint firstItem="ToB-kt-znT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9iG-9i-A84" secondAttribute="leading" constant="8" id="u9N-af-pRZ"/>
                                 <constraint firstAttribute="centerX" secondItem="iXW-gD-Bjp" secondAttribute="centerX" id="wKn-De-MT3"/>
@@ -149,6 +152,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="wFk-KY-TpU"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                     <state key="normal" title="Allow">
                         <color key="titleColor" red="0.66309183835983276" green="0.99308902025222778" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
