--- a/The Math/OnboardingMoodView.xib
+++ b/The Math/OnboardingMoodView.xib
@@ -16,20 +16,20 @@
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="onboarding_01" translatesAutoresizingMaskIntoConstraints="NO" id="pSU-nY-Lbw">
                             <rect key="frame" x="0.0" y="-322" width="192" height="322"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8g-fr-JUp" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8g-fr-JUp">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood by grabbing the blue button. The better your mood, the further up the screen you move your finger." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood by grabbing the blue button. The better your mood, the further up the screen you move your finger." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="300" id="YM3-3J-Edb">
                                     <variation key="heightClass=regular-widthClass=compact" constant="257"/>
                                 </constraint>
                             </constraints>
-                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                             <variation key="default">
@@ -49,10 +49,12 @@
                         <constraint firstItem="pSU-nY-Lbw" firstAttribute="top" secondItem="jxG-vJ-Npb" secondAttribute="top" id="3rx-Ug-fNw"/>
                         <constraint firstItem="Kow-pK-2tn" firstAttribute="leading" secondItem="jxG-vJ-Npb" secondAttribute="leading" constant="8" id="Jxo-Jl-XJW"/>
                         <constraint firstItem="D8g-fr-JUp" firstAttribute="top" secondItem="pSU-nY-Lbw" secondAttribute="bottom" constant="12" id="NOU-Su-yAy"/>
-                        <constraint firstItem="Kow-pK-2tn" firstAttribute="top" secondItem="D8g-fr-JUp" secondAttribute="bottom" constant="8" id="SR4-dd-PjT"/>
+                        <constraint firstItem="Kow-pK-2tn" firstAttribute="top" secondItem="D8g-fr-JUp" secondAttribute="bottom" constant="8" id="SR4-dd-PjT">
+                            <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                        </constraint>
                         <constraint firstAttribute="trailing" secondItem="D8g-fr-JUp" secondAttribute="trailing" constant="8" id="Uw3-un-ZRL"/>
                         <constraint firstAttribute="bottom" secondItem="Kow-pK-2tn" secondAttribute="bottom" id="ZCV-WR-yLM">
-                            <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                            <variation key="heightClass=regular-widthClass=compact" constant="13"/>
                         </constraint>
                         <constraint firstAttribute="trailing" secondItem="Kow-pK-2tn" secondAttribute="trailing" constant="8" id="bTj-iq-yQL"/>
                         <constraint firstItem="D8g-fr-JUp" firstAttribute="leading" secondItem="jxG-vJ-Npb" secondAttribute="leading" constant="8" id="fM4-em-xDZ"/>
